--- a/src/pages/Menu/Menu.module.scss
+++ b/src/pages/Menu/Menu.module.scss
@@ -66,4 +66,12 @@
         font-size: 3rem;
         margin-bottom: 30px;
     }
+    &__filters {
+        align-items: center;
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+        margin-bottom: 30px;
+        width: 100%;
+    }
 }
